--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <main>
+        <aside>
+            <div class="aside-head">
+                <img src="img/favicon.ico" alt="logo" class="logo">
+                <span class="app-name">Spotify</span>
+            </div>
+            <div class="menu">
+                <div class="option">
+                    <img src="img/home.svg" alt="home" class="home">
+                    <span class="option-name">Home</span>
+                </div>
+            </div>
+        </aside>
+        <div class="main-container">
+            <div class="header">
+                <div class="overlay"></div>
+                <div class="upgrade-button">EFFETTUA L'UPGRADE</div>
+            </div>
+        </div>
+    </main>
+    <div class="rec-bar">
+
+    </div>
 </body>
 </html>
