terzo commit: alcuni album con hover

--- a/index.html
+++ b/index.html
@@ -14,20 +14,73 @@
     <main>
         <aside>
             <div class="aside-head">
-                <img src="img/favicon.ico" alt="logo" class="logo">
-                <span class="app-name">Spotify</span>
+                <img src="img/logo.svg" alt="logo" class="logo">
+                <img src="img/logo-small.svg" alt="logo" class="small-logo">
             </div>
-            <div class="menu">
-                <div class="option">
-                    <img src="img/home.svg" alt="home" class="home">
+            <div class="menu lightgrey">
+                <div class="option selected">
+                    <img src="img/home.svg" alt="home" class="option-logo">
                     <span class="option-name">Home</span>
+                </div>
+                <div class="option">
+                    vjkfejnirbni
                 </div>
             </div>
         </aside>
         <div class="main-container">
-            <div class="header">
+            <div class="header-top">
                 <div class="overlay"></div>
                 <div class="upgrade-button">EFFETTUA L'UPGRADE</div>
+            </div>
+            <div class="header-bottom">
+                <div class="categories lightgrey">
+                    <div class="category">in evidenza<div class=border-bottom></div></div>
+                    <div class="category">podcast</div>
+                    <div class="category">classifiche</div>
+                    <div class="category">generi e mood</div>
+                    <div class="category">nuove uscite</div>
+                    <div class="category">scopri</div>
+                </div>
+                <div class="main-content">
+                    <div class="section">
+
+                        <div class="section-name">Recently Played</div>
+                        <div class="section-sub"></div>
+                        <div class="section-content">
+
+                            <div class="album">
+                                <div class="play">
+                                    <div class="play-overlay"></div>
+                                    <i class="play-icon fa-regular fa-circle-play"></i>
+                                </div>
+                                <img src="img/metal_lifting.jpg" alt="heavy-metal" class="heavy-metal album-img">
+                                <div class="album-name">Heavy Metal</div>
+                                <div class="author subtitle">Subtitle</div>
+                            </div>
+
+                            <div class="album">
+                                <div class="play">
+                                    <div class="play-overlay"></div>
+                                    <i class="play-icon fa-regular fa-circle-play"></i>
+                                </div>
+                                <img src="img/stranger.jpeg" alt="heavy-metal" class="heavy-metal album-img">
+                                <div class="album-name">Stranger things vol. 1 (a netflix original series soundtrack</div>
+                                <div class="author subtitle">Subtitle</div>
+                            </div>
+
+                            <div class="album">
+                                <div class="play">
+                                    <div class="play-overlay"></div>
+                                    <i class="play-icon fa-regular fa-circle-play"></i>
+                                </div>
+                                <img src="img/aquietplace.jpeg" alt="heavy-metal" class="heavy-metal album-img">
+                                <div class="album-name">a quiet place</div>
+                                <div class="author subtitle">Subtitle</div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
