--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <span class="option-name">Home</span>
                 </div>
                 <div class="option">
-                    vjkfejnirbni
+                    
                 </div>
             </div>
         </aside>
@@ -42,10 +42,12 @@
                     <div class="category">scopri</div>
                 </div>
                 <div class="main-content">
+                    <!-- first row of albums -->
                     <div class="section">
 
                         <div class="section-name">Recently Played</div>
                         <div class="section-sub"></div>
+
                         <div class="section-content">
 
                             <div class="album">
@@ -53,7 +55,7 @@
                                     <div class="play-overlay"></div>
                                     <i class="play-icon fa-regular fa-circle-play"></i>
                                 </div>
-                                <img src="img/metal_lifting.jpg" alt="heavy-metal" class="heavy-metal album-img">
+                                <img src="img/metal_lifting.jpg" alt="heavy-metal" class="album-img">
                                 <div class="album-name">Heavy Metal</div>
                                 <div class="author subtitle">Subtitle</div>
                             </div>
@@ -63,8 +65,8 @@
                                     <div class="play-overlay"></div>
                                     <i class="play-icon fa-regular fa-circle-play"></i>
                                 </div>
-                                <img src="img/stranger.jpeg" alt="heavy-metal" class="heavy-metal album-img">
-                                <div class="album-name">Stranger things vol. 1 (a netflix original series soundtrack</div>
+                                <img src="img/stranger.jpeg" alt="heavy-metal" class="album-img">
+                                <div class="album-name">Stranger things vol. 1 (a netflix original series soundtrack)</div>
                                 <div class="author subtitle">Subtitle</div>
                             </div>
 
@@ -73,13 +75,99 @@
                                     <div class="play-overlay"></div>
                                     <i class="play-icon fa-regular fa-circle-play"></i>
                                 </div>
-                                <img src="img/aquietplace.jpeg" alt="heavy-metal" class="heavy-metal album-img">
+                                <img src="img/aquietplace.jpeg" alt="heavy-metal" class="album-img">
                                 <div class="album-name">a quiet place</div>
+                                <div class="author subtitle">Subtitle</div>
+                            </div>
+
+                            <div class="album">
+                                <div class="play">
+                                    <div class="play-overlay"></div>
+                                    <i class="play-icon fa-regular fa-circle-play"></i>
+                                </div>
+                                <img src="img/split.jpeg" alt="heavy-metal" class="album-img">
+                                <div class="album-name">split</div>
+                                <div class="author subtitle">Subtitle</div>
+                            </div>
+
+                            <div class="album">
+                                <div class="play">
+                                    <div class="play-overlay"></div>
+                                    <i class="play-icon fa-regular fa-circle-play"></i>
+                                </div>
+                                <img src="img/cure.jpeg" alt="heavy-metal" class="album-img">
+                                <div class="album-name">a cure of wellness</div>
+                                <div class="author subtitle">Subtitle</div>
+                            </div>
+
+                            <div class="album">
+                                <div class="play">
+                                    <div class="play-overlay"></div>
+                                    <i class="play-icon fa-regular fa-circle-play"></i>
+                                </div>
+                                <img src="img/sinister.jpeg" alt="heavy-metal" class="album-img">
+                                <div class="album-name">Sinister</div>
                                 <div class="author subtitle">Subtitle</div>
                             </div>
 
                         </div>
                     </div>
+
+                    <!-- second row of album -->
+                    <div class="section">
+
+                        <div class="section-name">Creato per John Doe</div>
+                        <div class="subtitle">Più ascolti, più accurati saranno i suggerimenti</div>
+
+                        <div class="section-content">
+
+                            <div class="album">
+                                <div class="play">
+                                    <div class="play-overlay"></div>
+                                    <i class="play-icon fa-regular fa-circle-play"></i>
+                                </div>
+                                <img src="img/radar.jpeg" alt="heavy-metal" class="album-img">
+                                <div class="album-name">Release radar</div>
+                                <div class="author subtitle"></div>
+                            </div>
+
+                            <div class="album">
+                                <div class="play">
+                                    <div class="play-overlay"></div>
+                                    <i class="play-icon fa-regular fa-circle-play"></i>
+                                </div>
+                                <img src="img/mixdaily.jpeg" alt="heavy-metal" class="album-img">
+                                <div class="album-name">daily mix 1</div>
+                                <div class="author subtitle"></div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <!-- third row of albums -->
+                    <div class="section">
+
+                        <div class="section-name">Artisti più popolari</div>
+                        <div class="subtitle">Più ascolti, più accurati saranno i suggerimenti</div>
+
+                        <div class="section-content">
+
+                            <div class="album">
+                                <img src="img/einaudi.jpeg" alt="heavy-metal" class="album-img artist">
+                                <div class="album-name">Ludovico Einaudi</div>
+                                <div class="author subtitle"></div>
+                            </div>
+
+                            <div class="album">
+                                <img src="img/youg.jpeg" alt="heavy-metal" class="album-img artist">
+                                <div class="album-name">Lana Del Rey</div>
+                                <div class="author subtitle"></div>
+                            </div>
+
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
         </div>
